--- a/_posts/2014-05-11-truthy.markdown
+++ b/_posts/2014-05-11-truthy.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  truthy
+title:  truthy (tumblr)
 date:   2014-05-11 12:09:07
 tags: Dev Bootcamp, programming, self-teaching
 ---
