--- a/_posts/2014-05-11-truthy.markdown
+++ b/_posts/2014-05-11-truthy.markdown
@@ -11,18 +11,18 @@ My life has never been less simple, less black-and-white than this strange perio
 
 In parting, I leave some stanzas of favorite poem of mine, which will shortly manifest a tattoo.
 
-Shall I part my hair behind? Do I dare to eat a peach?
-I shall wear white flannel trousers, and walk along the beach.
+"Shall I part my hair behind? Do I dare to eat a peach?  
+I shall wear white flannel trousers, and walk along the beach.  
 I have heard the mermaids singing, each to each.
 
 I do not think that they will sing to me.
 
-I have seen them riding seaward on the waves
-Combing the white hair of the waves blown back
-When the wind blows the water white and black.
+I have seen them riding seaward on the waves  
+Combing the white hair of the waves blown back  
+When the wind blows the water white and black.  
 
-We have lingered in the chambers of the sea
-By sea-girls wreathed with seaweed red and brown
-'Till human voices wake us, and we drown.
+We have lingered in the chambers of the sea  
+By sea-girls wreathed with seaweed red and brown  
+'Till human voices wake us, and we drown."  
 
-"The Love Song of J. Alfred Prufock" — T.S. Eliot
+**"The Love Song of J. Alfred Prufock" — T.S. Eliot**
